2010-09-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-list): Servers may return \NoSelect
	case-insensitively.

	* imap.el (imap-fetch-safe): Removed function, and altered all callers
	to use `imap-fetch' instead.  According to the comments, this should be
	safe, since all other IMAP clients use the 1:* syntax.
	(imap-enable-exchange-bug-workaround): Removed.
	(imap-debug): Removed -- doesn't seem very useful.

	* mail-source.el (mail-source-fetch): Don't message if we're fetching
	mail from a file, and the file doesn't exist.

	* imap.el (imap-log): New convenience function used throughout instead
	of repeating the same code all over the place.

	* pop3.el (pop3-streaming-movemail): Return t for success.

	* nnimap.el (nnimap-open-connection): Look for the "imaps" entry in the
	.authinfo if we're using ssl connection.

	* nnvirtual.el (nnvirtual-create-mapping): Use the active info we
	already have if we're in a main Gnus `g' run.

	* gnus-start.el (gnus-method-rank): Get info for virtual groups last.

2010-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-method-rank): Replace equalp with equal.

	* nnmh.el (nnmh-request-list-1): Bind `file'.

	* pop3.el (pop3-set-process-query-on-exit-flag): New function that's an
	alias to set-process-query-on-exit-flag or process-kill-without-query.
	(pop3-open-server): Use it.

2010-09-04  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mail-source.el (mail-source-delete-crash-box): Always move the crash
	box to the Incoming file.  Fixes mistake in previous checkin.

	* pop3.el (pop3-send-streaming-command): Off-by-one error on the
	request loop (for debugging purposes) removed.

	* nnml.el (nnml-save-nov): Message around nnml-save-nov so that the
	culprit is more visible.
	(nnml-save-incremental-nov, nnml-open-incremental-nov)
	(nnml-add-incremental-nov): New functions to do "incremental" nov
	updates, where we just append to the end of the existing nov files