@@ -2,6 +2,7 @@
 
 	* nnimap.el (nnimap-request-list): Servers may return \NoSelect
 	case-insensitively.
+	(nnimap-debug): Removed.
 
 	* imap.el (imap-fetch-safe): Removed function, and altered all callers
 	to use `imap-fetch' instead.  According to the comments, this should be
